[gd_scene load_steps=2 format=3 uid="uid://dvh2h6i4sixrn"]

[ext_resource type="Script" uid="uid://bp4hy0qfyctpw" path="res://gen_art.gd" id="1_uhwsu"]

[node name="gen_art" type="Node2D"]
script = ExtResource("1_uhwsu")

[node name="Label" type="Label" parent="."]
offset_left = 10.0
offset_top = 1.0
offset_right = 97.0
offset_bottom = 24.0
text = "Num Lines:"

[node name="num_slider" type="HSlider" parent="."]
offset_left = 109.0
offset_top = 4.0
offset_right = 377.0
offset_bottom = 20.0

[node name="Label2" type="Label" parent="."]
offset_left = 10.0
offset_top = 46.0
offset_right = 67.0
offset_bottom = 69.0
text = "Radius:"

[node name="rad_slider" type="HSlider" parent="."]
offset_left = 79.0
offset_top = 48.0
offset_right = 367.0
offset_bottom = 64.0

[connection signal="value_changed" from="num_slider" to="." method="_on_num_slider_value_changed"]
[connection signal="value_changed" from="rad_slider" to="." method="_on_rad_slider_value_changed"]
